# pylastro

./: .gitignore  README.md  pyproject.toml
src/pylastro/: gerar_dados.py  main.py
src/pylastro/core/: config.py  dependencies.py
src/pylastro/db/: duckdb.py
src/pylastro/domain/: agente.py  analises.py  detector_fraudes.py  mock_api_empresas.py
src/pylastro/models/: duplicatas_fraudes.py  populacao.py
src/pylastro/routes/: mocks.py  relatorios.py  view.py
src/pylastro/scripts/: gerar_dados.py  gerar_fraudes.py  popular_banco_automatico.py
src/pylastro/service/: detector_fraude.py  simular_alerta.py
