[project]
name = "pylastro"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0.0"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "fastapi (>=0.123.9,<0.124.0)",
    "faker (>=38.2.0,<39.0.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "duckdb (>=1.4.2,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "langchain-google-genai (>=4.0.0,<5.0.0)",
    "langchain (>=1.1.3,<2.0.0)",
    "langgraph (>=1.0.4,<2.0.0)"
]

[tool.poetry]
packages = [{include = "pylastro", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
